# Multi_agent_assistant_in_CPS_environment

./: agent_requirements.txt  agents.code-workspace  data.py
DeepEval/: data_eval_script.py  eval_script.py
DeepEval/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
multi_agent/: README.md  pyproject.toml
multi_agent/src/multi_agent/: crew.py  main.py
multi_agent/src/multi_agent/config/: agents.yaml  tasks.yaml
output/: icps_code_and_results.txt
single_agent/: README.md  csv_data.csv  pyproject.toml
single_agent/output/: code_and_output.txt  icps_code_and_results.txt
single_agent/src/single_agent/: crew.py  main.py  tia_doc.txt
single_agent/src/single_agent/config/: agents.yaml  tasks.yaml
