[project]
name = "single_agent"
version = "0.1.0"
description = "Single_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
single_agent = "single_agent.main:run"
run_crew = "single_agent.main:run"
train = "single_agent.main:train"
replay = "single_agent.main:replay"
test = "single_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
